--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,48 +3,51 @@
 	<title>Hai: Basically Twitter.</title>
 	<link rel="stylesheet" type="text/css" href="assets/stylesheets/application.css.scss">
 </head>
+
 <body>
      
-<div class="wrapper"> 
+
   <nav id="hai-nav" class="top-bar" data-topbar role="navigation">
-  
-  <ul class="title-area">
-    <li id="logo"><img src="http://i.imgur.com/glF1xD1.png"></li>
-     <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-  </ul>
-
-  <section class="top-bar-section">
-    <!-- Right Nav Section -->
-    <ul class="right">
-      <li><a id="home-icon" href="#">&#8962;</a></li>
-      <li><a href="#"><img id="users-icon" src="http://i.imgur.com/2YR3PxU.png"></a></li>
-      <li><a href="#"><img id="profile-icon" src="http://i.imgur.com/msk9tLg.png"></a></li>
-
-      <li class="has-dropdown">
-        <a id="settings-icon" href="#">&#9881;</a>
-        <ul class="dropdown">
-          <li><a href="#">Settings</a></li>
-          <li><a href="#">Logout</a></li>
-        </ul>
-      </li>
+    
+    <ul class="title-area">
+      <li id="logo"><img src="http://i.imgur.com/glF1xD1.png"></li>
+       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+      <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
     </ul>
 
-  </section>
-</nav>
-   
-  <div class="row">
-  
-     
-    <div class="small-3 columns ">
+    <section class="top-bar-section">
+      <!-- Right Nav Section -->
+      <ul class="right">
+        <li><a id="home-icon" href="#">&#8962;</a></li>
+        <li><a href="#"><img id="users-icon" src="http://i.imgur.com/2YR3PxU.png"></a></li>
+        <li><a href="#"><img id="profile-icon" src="http://i.imgur.com/msk9tLg.png"></a></li>
+
+        <li class="has-dropdown">
+          <a id="settings-icon" href="#">&#9881;</a>
+          <ul class="dropdown">
+            <li><a href="#">Settings</a></li>
+            <li><a href="#">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+
+    </section>
+  </nav>
+
+<div class="off-canvas-wrap" data-offcanvas>
+  <div class="inner-wrap">
+
+    <div id="profile-button"><a class="left-off-canvas-toggle" href="#">&#9654;</a></div>
+
+    <!-- Off Canvas Menu -->
+    <aside class="left-off-canvas-menu">
+        <!-- whatever you want goes here -->
       <div id="profile-box">
-        <a href="#"><img id="profile-pic" src="http://upload.wikimedia.org/wikipedia/commons/b/b2/Hausziege_04.jpg"/></a>
-
-
+        <img id="profile-pic" src="http://upload.wikimedia.org/wikipedia/commons/b/b2/Hausziege_04.jpg"/>
         <div id="profile-info">
-          <h5><a href="#">Jake Catt</a></h5>
+          <div id="username"><h5>Jake Catt</h5></div>
           <section class="section">
-            <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit.<p>
+            <div id="about"><h3><small>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit.</small></h3>
           </section>
           <section class="section">
             <h6><a href="www.google.com">www.jakecatt.com</a></h6>
@@ -57,93 +60,85 @@
             <h6><a href="#">Followers:</a></h6>
           </section>
         </div>
- 
       </div>
-    </div>
+
+    </aside>
+
+    <!-- main content goes here -->
+    <div class="wrapper"> 
+       
+      <div class="small-12 columns">
+   
+        <div id="new-post">
+          <div class="row">
+            <div class="small-12 columns">
+              <form>
+                  <label>
+                    <input type="text" placeholder="Hai!">
+                  </label>
+              </form>
+            </div>
+          </div>
+        </div>
+
+        <div class="post">
+          <div class="row">
+            <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+            <div class="small-10 columns">
+              Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="post">
+          <div class="row">
+            <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+            <div class="small-10 columns">
+              Bacon ipsum dolor sit amet !!!!.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="post">
+          <div class="row">
+            <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+            <div class="small-10 columns">
+              Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="post">
+          <div class="row">
+            <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+            <div class="small-10 columns">
+              Bacon ipsum dolo</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="post">
+          <div class="row">
+            <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+            <div class="small-10 columns">
+              Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehe.</p>
+            </div>
+          </div>
+        </div>
     
-     
-     
-    <div class="small-9 columns">
- 
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo.</p>
-          </div>
-        </div>
-      </div>
+   
+   <div class="push"></div>
+  </div>
 
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit amet !!!!.</p>
-          </div>
-        </div>
-      </div>
+  <!-- close the off-canvas menu -->
+  <a class="exit-off-canvas"></a>
 
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolo</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehe.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum doecdsx.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, sbh.</p>
-          </div>
-        </div>
-      </div>
-
-      <div class="post">
-        <div class="row">
-          <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
-          <div class="small-10 columns">
-            Bacon ipsum dolor sit am.</p>
-          </div>
-        </div>
-      </div>
-  
- 
- <div class="push"></div>
-</div class="wrapper">
- 
-<footer>
-  <p>© Copyright Hai, LLC</p>
-</footer>
+  </div>
+</div>  
+   
+  <footer>
+    <p>© Copyright Hai, LLC</p>
+  </footer>
     
 
 </body>
