--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,8 +30,8 @@
           </ul>
         </li>
       </ul>
-
     </section>
+    
   </nav>
 
 <div class="off-canvas-wrap" data-offcanvas>
@@ -47,18 +47,15 @@
         <div id="profile-info">
           <div id="username"><h5>Jake Catt</h5></div>
           <section class="section">
-            <div id="about"><h3><small>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit.</small></h3>
-          </section>
-          <section class="section">
-            <h6><a href="www.google.com">www.jakecatt.com</a></h6>
+            <div id="about"><h4><small>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit.</small></h4></div>
+            <div id="user-link"><h4><small><a href="www.google.com">www.jakecatt.com</a></small></h4><div>
           </section>
           <hr>
           <section class="section">
-            <h6><a href="#">Following:</a></h6>
+            <h4><small><a href="#">Following:</a></small></h4>
+            <h4><small><a href="#">Followers:</a></small></h4>
           </section>
-          <section class="section">
-            <h6><a href="#">Followers:</a></h6>
-          </section>
+          <hr>
         </div>
       </div>
 
