--- a/app/assets/stylesheets/others.css.scss
+++ b/app/assets/stylesheets/others.css.scss
@@ -109,6 +109,29 @@ footer p {
 	padding-bottom: 20px;
 }
 
+#other-user {
+	background-color: white;
+	border-bottom: solid #E6E6E6 1px;
+	margin-bottom: 50px;
+	margin-right: 10px;
+	padding-bottom: 10px;
+	#other-user-profile-pic img {
+		border-radius: 50%;
+		height: 100px;
+		width: 100px;
+		margin: 0 auto;
+	}
+	#sf-username {
+		color: black;
+	}
+	#sf-bio small {
+		color: black;
+	}
+	#sf-link h4 small a{
+	color: #429E9D;
+}
+}
+
 #id {
 	margin-left: 10px;
 	a {
