--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,7 +10,7 @@
   <%= f.text_field :username, autofocus: true %></div>
 
    <div><%= f.label 'Profile Photo' %><br />
-  <%= f.file_field :profile_photo %></div>
+  <%= f.text_field :profile_photo %></div>
 
   <div><%= f.label :password %> <% if @validatable %><i>(<%= @minimum_password_length %> characters minimum)</i><% end %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
