application.html.erb done

--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -1,24 +1,14 @@
-<html>
-
-<head>
-	<title>Hai: Basically Twitter.</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-
-<body>
-     
   <!-- navbar partial -->
-  <%= render "nav_bar" %>
+  <%= render "layouts/nav_bar" %>
 
 <div class="off-canvas-wrap" data-offcanvas>
   <div class="inner-wrap">
     <aside class="left-off-canvas-menu">
-        
+      
+      <% if current_user %>  
       <!-- Off canvas profile partial -->
-      <%= render "off_canvas_profile" %>
-  
+      <%= render "layouts/off_canvas_profile" %>
+  	<% end %> 
     </aside>
 
     <div class="wrapper">
@@ -28,10 +18,10 @@
       <!-- other user partial-->
 
       <!-- new post partial -->
-      <%= render "new_post_form" %>
+      <%= render "users/new_post_form" %>
 
       <!-- posts partial -->
-      <%= render "post_feed" %>  
+      <%= render "users/post_feed" %>  
      
       <div class="push"></div>
     
@@ -42,10 +32,3 @@
   </div>
 </div>
  
-
- <!-- footer partial -->
- <%= render "footer" %>
-
-</body>
-
-</html>
