--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hai</title>
+	<title>Hai: Basically Twitter.</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
 
-<%= yield %>
+<body>
+	<% if user_signed_in? %>
+
+	<%= render 'layouts/main' %>
+
+	<% else %>
+
+	<%= yield %>
+
+	<% end %> 
+     
+
+ <!-- footer partial -->
+ <%= render "users/footer" %>
 
 </body>
+
 </html>
