--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,8 @@
-<%= current_user.inspect %>
+<ul>
+<% @posts.each do |x| %>
+	<li><%= x.body %> - <%= x.user.username %></li>
+<% end %>
+
+</ul>
+
+<%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
