--- a/app/views/follows/followers.html.erb
+++ b/app/views/follows/followers.html.erb
@@ -1,1 +1,17 @@
-followers.html.erb
+this is a list of all of the followers of the current user
+
+<div class="post">
+  <ul>
+    <% @followers.each_with_index do |follower| %>
+    <li class="row">
+      <div class="small-2 columns"><%= image_tag follower.profile_photo, class: "pic" %></div>
+      <div class="small-10 columns">
+        <h3><%= follower.username %></h3>
+        <p><%= follower.bio %></p>
+     </div>
+   </li>
+   <% end %>
+</ul>
+</div>
+
+
