--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,18 @@
 <html>
 <head>
 	<title>Hai: Basically Twitter.</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
 </head>
 
 <body>
-	<% if user_signed_in? %>
+	 <%= render "layouts/nav_bar" %>
 
-	<%= render 'layouts/main' %>
-
-	<% else %>
 
 	<%= yield %>
 
-	<% end %> 
-     
+
 
  <!-- footer partial -->
  <%= render "users/footer" %>
