followers page is working

--- a/app/views/follows/followers.html.erb
+++ b/app/views/follows/followers.html.erb
@@ -1,12 +1,13 @@
 this is a list of all of the followers of the current user
 
+
 <div class="post">
   <ul>
-    <% @followers.each_with_index do |follower| %>
+    <% @followers.each do |follower| %>
     <li class="row">
       <div class="small-2 columns"><%= image_tag follower.profile_photo, class: "pic" %></div>
       <div class="small-10 columns">
-        <h3><%= follower.username %></h3>
+        <p><%= follower.username %></p>
         <p><%= follower.bio %></p>
      </div>
    </li>
