--- a/app/views/layouts/_main.html.erb
+++ b/app/views/layouts/_main.html.erb
@@ -4,15 +4,15 @@
 <div class="off-canvas-wrap" data-offcanvas>
   <div class="inner-wrap">
     <aside class="left-off-canvas-menu">
-      
-      <% if current_user %>  
+
+      <% if current_user %>
       <!-- Off canvas profile partial -->
       <%= render "layouts/off_canvas_profile" %>
-  	<% end %> 
+  	<% end %>
     </aside>
 
     <div class="wrapper">
-      <div id="profile-button"><a class="left-off-canvas-toggle" href="#">&#9654;</a></div>  
+      <div id="profile-button"><a class="left-off-canvas-toggle" href="#">&#9654;</a></div>
         <div class="small-12 columns">
 
       <!-- other user partial-->
@@ -21,14 +21,14 @@
       <%= render "users/new_post_form" %>
 
       <!-- posts partial -->
-      <%= render "users/post_feed" %>  
-     
+      <%= render "users/post_feed" %>
+      <%= yield %>
       <div class="push"></div>
-    
+
     </div>
 
     <a class="exit-off-canvas"></a>
 
   </div>
 </div>
- 
+
