--- a/app/views/users/_post_feed.html.erb
+++ b/app/views/users/_post_feed.html.erb
@@ -1,8 +1,12 @@
+<% @posts.each do |x| %>
+
 <div class="post">
   <div class="row">
-    <div class="small-2 columns"><img src="http://placehold.it/80x80&text=[img]"/></div>
+    <div class="small-2 columns"><img src="<%= x.user.profile_photo %>"/></div>
     <div class="small-10 columns">
-      <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo.</p>
+      <p><%= x.body %></p>
     </div>
+
   </div>
 </div>
+ <% end %>
