--- a/app/views/layouts/_off_canvas_profile.html.erb
+++ b/app/views/layouts/_off_canvas_profile.html.erb
@@ -9,7 +9,7 @@
     <hr>
     <section class="section">
       <h4><small><a href="#">Following:</a> <%= current_user.followed_users.count %> </small></h4>
-      <h4><small><a href="#">Followers:</a> <%= current_user.followers.count %> </small></h4>
+      <h4><small><a href="/users/<%= current_user.id %>/followers">Followers:</a> <%= current_user.followers.count %> </small></h4>
     </section>
     <hr>
   </div>
