working on following functionality

--- a/app/views/users/_post_feed.html.erb
+++ b/app/views/users/_post_feed.html.erb
@@ -2,7 +2,9 @@
 
 <div class="post">
   <div class="row">
-    <div class="small-2 columns"><img src="<%= x.user.profile_photo %>"/></div>
+    <div class="small-2 columns"><%= link_to user_path(x.user) do %> 
+        <img class="pic" src="<%= x.user.profile_photo %>" />
+        <% end %></div>
     <div class="small-10 columns">
       <p><%= x.body %></p>
     </div>
