--- a/app/views/follows/followers.html.erb
+++ b/app/views/follows/followers.html.erb
@@ -1,19 +1,20 @@
+<% @followers.each do |x| %>
+
 <div class="post">
-  <ul>
-    <% @followers.each do |follower| %>
-    <li class="row">
-      <div class="small-2 columns">
-        <%= link_to user_path(follower) do %> 
-        <img class="pic" src="<%= follower.profile_photo %>" />
-        <% end %>
-      </div>
-      <div class="small-10 columns">
-        <p><%= follower.username %></p>
-        <p><%= follower.bio %></p>
-     </div>
-   </li>
-   <% end %>
-</ul>
+  <div class="row">
+    <div class="small-2 columns">
+
+      <%= link_to user_path(follower) do %>
+
+      <img src="<%= follower.profile_photo %>"/>
+
+      <% end %>
+    </div>
+
+    <div class="small-10 columns">
+      <p><%= follower.username %></p>
+      <p><%= follower.bio %></p>
+    </div>
+  </div>
 </div>
-
-
+<% end %>
