--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,11 +15,13 @@
 
       <!-- other user partial-->
       <% if current_user != @user %>
-      <%= @user.username %>
-      <%= @user.bio %> 
-      <!-- new post partial -->
+      <div> <%= @user.username %> </div>
+      <div> <%= @user.bio %> </div>
+        <%= form_for @follow_request, url:  user_follows_path(@user) do |f| %>
+          <%= f.submit 'Follow'%>
+        <% end %> 
       <% else %>
-      <%= render "users/new_post_form" %>
+        <%= render "users/new_post_form" %>
       <% end %>
       <!-- posts partial -->
       <%= render "users/post_feed" %>  
