--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,11 @@
       <% if current_user != @user %>
       <div> <%= @user.username %> </div>
       <div> <%= @user.bio %> </div>
-        <%= link_to 'Follow', user_follows_path(user_id: @user.id ), method: :post %> 
+        <% if current_user.followed_users.include?(@user) %>
+          <%= link_to 'Unfollow', user_follow_path(user_id: @user.id), method: :delete %>
+        <% else %>
+          <%= link_to 'Follow', user_follows_path(user_id: @user.id ), method: :post %> 
+        <% end %>
       <% else %>
         <%= render "users/new_post_form" %>
       <% end %>
