--- a/app/views/layouts/_off_canvas_profile.html.erb
+++ b/app/views/layouts/_off_canvas_profile.html.erb
@@ -11,15 +11,25 @@
             </small>
           </h4>
         <% else %> 
-          <input type="text">
+          <form>
+            <input type="text"placeholder="Enter bio">
+          </form>
         <% end %>
       </div>
       <div id="user-link">
-        <h4>
-          <small>
-            <a href="<%= current_user.personal_website %>"><%= current_user.personal_website %></a>
-          </small>
-        </h4>
+        <% if current_user.bio %>
+          <h4>
+            <small>
+              <a href="<%= current_user.personal_website %>">
+                <%= current_user.personal_website %>
+              </a>
+            </small>
+          </h4>
+        <% else %>
+          <form>
+            <input type="text">
+          </form>
+        <% end %>
         <div>
     </section>
     <hr>
