--- a/app/views/layouts/_off_canvas_profile.html.erb
+++ b/app/views/layouts/_off_canvas_profile.html.erb
@@ -3,7 +3,7 @@
   <div id="profile-info">
     <div id="username"><h5><%= current_user.username %></h5></div>
     <section class="section">
-      <div id="about">
+      <div id="about" data-id="<%= current_user.id %>">
         <% if current_user.bio %>
           <h4>
             <small>
