--- a/app/views/layouts/_off_canvas_profile.html.erb
+++ b/app/views/layouts/_off_canvas_profile.html.erb
@@ -17,7 +17,7 @@
         <% end %>
       </div>
       <div id="user-link">
-        <% if current_user.bio %>
+        <% if current_user.personal_website %>
           <h4>
             <small>
               <a href="<%= current_user.personal_website %>">
